# e3sm_to_cmip

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CMOR NOTES.md  CMOR_NOTES.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  clm_to_cmip_translation_reference.txt  cmor_input_piControl.json  conf.py  e3sm_to_cmip  e3sm_to_cmip.py  e3sm_to_cmip.util-20241111_030200_960036  e3sm_user_config_picontrol.json  ilamb_config_sample.cfg  index.html  index.rst  output11  pyproject.toml  readthedocs.yml  run_single_var.sh  setup.cfg  setup.py  singlevar_ts.py  sub  tbump.toml  test.py  use  workflow.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build_workflow.yml  release_workflow.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
cmor_handlers/: CLDTOT.py  FLDS.py  FSDS.py  FSNS.py  LAISHA.py  LHFLX.py  NBP.py  PRECC.py  PRECL.py  PRECSC.py  PS.py  PSL.py  QFLX.py  QINTR.py  QOVER.py  QREFHT.py  QRUNOFF.py  QSOIL.py  QVEGE.py  QVEGT.py  RHREFHT.py  SHFLX.py  SOILICE.py  SOILLIQ.py  SOILWATER_10CM.py  TAUX.py  TAUY.py  TREFHT.py  TREFHTMN.py  TREFHTMX.py  TS.py  TSMN.py  TSMX.py  TSOI.py  U10.py  cl.py  cli.py  clivi.py  clt.py  clw.py  (+31 more)
conda/: conda_build.sh  dev.yml  meta.yaml
conda-env/: ci.yml  dev.yml  readthedocs.yml
docs/: Makefile  cwl.html  genindex.html  high_freq.html  index.html  objects.inv  search.html  searchindex.js  usage.html  workflow.md
docs/_sources/: cwl.rst.txt
docs/doctrees/: cwl.doctree  environment.pickle  examples.doctree  high_freq.doctree  index.doctree  installation.doctree  usage.doctree  var_map_atm.doctree  var_map_ice.doctree  var_map_lnd.doctree  var_map_ocn.doctree
docs/guides/: workflow.md
docs/html/: .buildinfo  cwl.html  examples.html  genindex.html  high_freq.html  index.html  objects.inv  search.html  searchindex.js  usage.html  var_map_atm.html  var_map_ice.html  var_map_lnd.html  var_map_ocn.html
docs/source/: conf.py  cwl.rst  development-guide.rst  examples.rst  getting-started.rst  index.rst  preprocessing.rst  usage.rst  var-handlers.rst
e3sm_to_cmip/: __init__.py  __main__.py  _logger.py  argparser.py  default.py  generate.py  handler.py  lib.py  main.py  mpas.py  runner.py  util.py  version.py
e3sm_to_cmip/backup/: lib.py.qboi30
e3sm_to_cmip/cmor_handlers/: __init__.py  _formulas.py  abs550aer.py  areacella.py  areacello.py  cLitter.py  cProduct.py  cSoil.py  cVeg.py  cesm_mmrbc.py  ch4_monZ.py  cl.py  cl.py.bak  clcalipso.py  cli.py  cli.py.bak  clisccp.py  clivi.py  cloud_area_frac_mon.py  clt.py  clt_mon.py  cltc_mon.py  clw.py  clwvi.py  cod_mon.py  convec_cloud_area_frac_mon.py  default.template  default_handler.py  default_handler_info.yaml  default_names.yaml  emibc.py  (+158 more)
lib/: util.py
logs/: README.md
recipe/: conda_build.sh  meta.yaml
resources/: levgrnd_bnds.py  levgrnd_bnds_generator.py
scripts/: README.md  check_dataset.py  check_input_dataset.py  cmor-example.py  components.yaml  convert_land_variables.py  data_stager.py  dataset_spec.yaml  esgf_check.py  example_end-to-end_script.sh  example_end_to_end_script.sh  find_sftlf_issue.py  fix_mask.py  fix_msftmz.py  fix_time.py  generate_xmls_cmip6.py  hash_dataset.py  integrity_check.py  join_output.py  output_checker.py  run_atm.sh  run_regrid.py  run_vrt.py  setup_cases.py  tar_to_bagit.py
source/: conf.py  examples.rst  high_freq.rst  index.rst  usage.rst  var_map_ice.rst  var_map_ocn.rst
tests/: branch_comparison.py  run_script.py  test_placeholder.py  test_util.py
xjb_use/: sub
(+682 files in other folders)
